--- a/resources/blog_docs/content/FLUTTER/页面传递参数.md
+++ b/resources/blog_docs/content/FLUTTER/页面传递参数.md
@@ -38,7 +38,7 @@ class _BlogSheetState extends State<BlogSheet> {
   }
 
   Future getData({String type = 'api', String category = 'PHP'}) async {
-    // final String url = "http://localhost:8081/$type?category=$category";
+    final String url = "http://localhost:8081/$type?category=$category";
     final response = await http.get(url);
 
     if (response.statusCode == 200) {
