修改科学上网，之后修改前端的markdown不对应的问题

--- a/resources/blog_docs/content/树莓派/免费科学上网.md
+++ b/resources/blog_docs/content/树莓派/免费科学上网.md
@@ -9,8 +9,8 @@
 
 
 ### 三、安装环境 
-1.使用树莓派作为vpn实现科学上网，树莓派烧录的是debian-pi plus++版本，**注意：树莓派的版本基本上都是arm架构**  
-2.基于 https://v2free.net/ ，文档也足够详细，非常ns，正常注册都会有1g左右的流量，然后每天签到会获得300~500M流量，对于本人已经足够用。
+* 1.使用树莓派作为vpn实现科学上网，树莓派烧录的是debian-pi plus++版本，**注意：树莓派的版本基本上都是arm架构**  
+* 2.基于 https://v2free.net/ ，文档也足够详细，非常ns，正常注册都会有1g左右的流量，然后每天签到会获得300~500M流量，对于本人已经足够用。
 
 
 ### 四、安装
@@ -19,6 +19,7 @@
 参考：https://v2free.net/doc/#/linux/clash
 
 ####   **安装clash**
+
 1.下载linux arm clash版本
 >wget -O clash.gz https://github.com/Dreamacro/clash/releases/download/v1.9.0/clash-linux-armv7-v1.9.0.gz  
 
@@ -51,9 +52,13 @@
 
 5.安装clash的webui界面（可选）
 > wget https://github.com/haishanh/yacd/archive/gh-pages.zip  
+
 >unzip gh-pages.zip  
+
 >mv yacd-gh-pages/ dashboard/  
+
 >在config.yml中添加两行 secret: "" external-ui: dashboard  
+
 >在浏览器里面访问 http://serverip:9090/ui/ 来调试 Clash  
 
 #### **添加开机自启动**
@@ -89,10 +94,14 @@ WantedBy=multi-user.target
 
 #### **chrome配置SwitchyOmega**
 1.下载Proxy SwitchyOmega
->https://proxy-switchyomega.com/file/Proxy-SwitchyOmega-Chromium-2.5.15.crx  
+>https://proxy-switchyomega.com/file/Proxy-SwitchyOmega-Chromium-2.5.15.crx
+
 2.将crx文件后缀名修改为.zip格式，然后解压到当前文件夹下    
+
 3.打开chrome 设置-》扩展-》开发者模式，加载刚才的解压文件夹    
+
 4.本地树莓派的地址是局域网地址192.168.1.107，之前配置的内网地址是10.8.0.14  
+
 ![avatar](https://blog.hexiefamily.xin/assets/switchomega.png)  
 
 5.这样就实现了远程也可以科学上网的需求  
