修改图片路径

--- a/resources/blog_docs/content/树莓派/免费科学上网.md
+++ b/resources/blog_docs/content/树莓派/免费科学上网.md
@@ -123,7 +123,7 @@
 - 4.本地树莓派的地址是局域网地址192.168.1.107，之前配置的内网地址是10.8.0.14  
 
 
-![avatar](https://blog.hexiefamily.xin/assets/switchomega.png)  
+![avatar](../../assets/switchomega.png)  
 
 - 5.这样就实现了远程也可以科学上网的需求  
 
