更新签到脚本，使用企业微信提醒

--- a/resources/blog_docs/content/树莓派/免费科学上网.md
+++ b/resources/blog_docs/content/树莓派/免费科学上网.md
@@ -16,7 +16,7 @@
 
 - 使用的是linux for clash arm7版本,都是在root用户下操作的（[参考链接](https://v2free.net/doc/#/linux/clash)）
 
-####  &emsp;    **安装clash**
+#### **安装clash**
 
 - 1.下载linux arm clash版本
 
@@ -38,7 +38,7 @@
 
 >Clash v1.9.0 linux arm with go1.17.5 Sun Jan  2 03:13:32 UTC 2022
 
-####   &emsp;  **添加配置文件**
+####   **添加配置文件**
 - 1.生成config.yml文件 在~/.config/clash/config.yml
 
 >clash
@@ -55,7 +55,7 @@
 
 >clash
 
-&emsp; `ps:如果端口already bind，请在config.yml中配置新的端口即可。`
+`ps:如果端口already bind，请在config.yml中配置新的端口即可。`
 
 - 5.安装clash的webui界面（可选）
 
@@ -71,27 +71,30 @@
 
 
 
-#### &emsp;**添加开机自启动**
+#### **添加开机自启动**
 - 1.在 /lib/systemd/system/ 目录下创建 clash@.service 文件
 
 >nano /lib/systemd/system/clash@.service  
 
+`写入以下内容（别修改）然后保存：`
 
-&emsp;`写入以下内容（别修改）然后保存：`
-
+```
 	
-		[Unit]
-		Description=A rule based proxy in Go for %i.
-		After=network.target
-		
-		[Service]
-		Type=simple
-		User=%i
-		Restart=on-abort
-		ExecStart=/usr/local/bin/clash
-		
-		[Install]
-		WantedBy=multi-user.target
+[Unit]
+Description=A rule based proxy in Go for %i.
+After=network.target
+
+[Service]
+Type=simple
+User=%i
+Restart=on-abort
+ExecStart=/usr/local/bin/clash
+
+[Install]
+WantedBy=multi-user.target
+
+```
+
 		
 - 2.重新加载 systemd 模块
 
@@ -109,7 +112,7 @@
 
 >reboot
 
-#### &emsp;**chrome配置SwitchyOmega**
+#### **chrome配置SwitchyOmega**
 - 1.下载Proxy SwitchyOmega
 
 >https://proxy-switchyomega.com/file/Proxy-SwitchyOmega-Chromium-2.5.15.crx
@@ -127,9 +130,12 @@
 
 - 5.这样就实现了远程也可以科学上网的需求  
 
+#### **添加自动脚本，每日签到**
+- 1.拆解v2free的登录模块和签到模块
+- 2.开启cron定时脚本，每天执行
+- 3.使用企业微信提醒每天签到多少流量，还剩多少流量
 
 
 ### 五、未来改进
 
-- 追加自动脚本，每日签到
 - v2free 更新，添加定时脚本更新订阅地址   
