更改科学上网文件

--- a/resources/blog_docs/content/树莓派/免费科学上网.md
+++ b/resources/blog_docs/content/树莓派/免费科学上网.md
@@ -131,9 +131,9 @@ WantedBy=multi-user.target
 - 5.这样就实现了远程也可以科学上网的需求  
 
 #### **添加自动脚本，每日签到**
-- 1.拆解v2free的登录模块和签到模块
-- 2.开启cron定时脚本，每天执行
-- 3.使用企业微信提醒每天签到多少流量，还剩多少流量
+- 1.拆解v2free的登录模块和签到模块.
+- 2.开启cron定时脚本，每天执行.
+- 3.使用企业微信提醒每天签到多少流量，还剩多少流量.
 
 
 ### 五、未来改进
