--- a/resources/blog_docs/content/微信公众号/无痛苦更新公众号.md
+++ b/resources/blog_docs/content/微信公众号/无痛苦更新公众号.md
@@ -5,7 +5,7 @@
 
 - 前一阵子，看了一个大佬写的无痛苦更新公众号，他写了一个python的插件，联合obsdian，受益良多，正在向他学习，大佬的[博客](https://catcoding.me/)网址，公众号是程序员的喵，有兴趣可以关注下
 
-- 但是别人的东西必须得适用于自己才好，大佬的插件比较精简，但是样式不是我喜欢的，我想要追加css进去，这样可以随意替换css，其次本人主营php，博客是用golang开发的，python插件有点突兀，所以这也让我重新拾起go，开发了一个类似他的那个插件的golang版本
+- 但是别人的东西必须得适用于自己才好，大佬的插件比较精简，但是样式不是我喜欢的，我想要追加css进去，这样可以随意替换css，其次本人主营php，博客是用golang开发的，python插件有点突兀，所以这也让我重新拾起go，开发了一个类似他的那个插件的golang版本[v2free机场](https://v2free.net/)
 
 - [链接demo](https://github.com/cjyzwg/markdown-wechat-demo)
 
