--- a/resources/blog_docs/content/微信公众号/无痛苦更新公众号.md
+++ b/resources/blog_docs/content/微信公众号/无痛苦更新公众号.md
@@ -3,9 +3,9 @@
 
 - 想更新公众号，一直没有动力去写，一个是自己的文笔实在是太弱，二个是觉得公众号的更新很麻烦，每次都需要去更新，尤其图片要重新上传，这就很麻烦，然后有些样式也不符合要求
 
-- 前一阵子，看了一个大佬写的无痛苦更新公众号，他写了一个python的插件，联合obsdian，受益良多，正在向他学习，大佬的[博客](https://catcoding.me/)网址，公众号是程序员的喵，有兴趣可以关注下
+- 前一阵子，看了一个大佬写的无痛苦更新公众号，他写了一个python的插件，受益良多，正在向他学习，大佬的[博客](https://catcoding.me/)网址，公众号是程序员的喵，有兴趣可以关注下
 
-- 但是别人的东西必须得适用于自己才好，大佬的插件比较精简，但是样式不是我喜欢的，我想要追加css进去，这样可以随意替换css，其次本人主营php，博客是用golang开发的，python插件有点突兀，所以这也让我重新拾起go，开发了一个类似他的那个插件的golang版本[v2free机场](https://v2free.net/)
+- 但是别人的东西必须得适用于自己才好，大佬的插件比较精简，但是样式不是我喜欢的，我想要追加css进去，这样可以随意替换css，其次本人主营php，博客是用go开发的，python插件有点突兀，所以这也让我重新拾起go，开发了一个类似他的那个插件的go版本
 
 - [链接demo](https://github.com/cjyzwg/markdown-wechat-demo)
 
@@ -18,10 +18,10 @@
 - go run main.go（即可添加到草稿箱）
 
 #### **脚本**
-- 用于添加草稿箱，以及提交github仓库
+用于添加草稿箱，以及提交github仓库
 
 ```shell
-/bin/sh
+#!/bin/sh
 configPath=.vscode/.env
 function get_config() {
     local configName=$1
@@ -33,9 +33,26 @@ function set_config() {
     local confgValue=$2
     sed -i "" -e "s:$configName=.*:$configName=$confgValue:g" ${configPath}
 }
-function publish_draft(){
-
-    mpath=$(git status | awk '/modified/{print $0}' | awk -F "[:]" '{print $2}' )
+function publish_draft(){ 
+    addline=$(git status | awk '/Untracked/{print NR}')
+    mpath=""
+    if [ "$addline" = '' ]; then
+        echo "没有新添加的文件，更换为当前修改的最后一个文件"
+         # 取最后一行
+        all_lines=$(git status | awk '/modified/{print $0}' | awk -F "[:]" 'END{print NR}' )
+        if [ $all_lines -gt 0 ]; then
+            read -p "选取需要更新的文件的行数（从1开始）：" line
+            mpath=$(git status | awk '/modified/{print $0}' | awk -F "[:]" 'NR=="'"$line"'"{print $2}' )
+        else
+            mpath=$(git status | awk '/modified/{print $0}' | awk -F "[:]" 'END{print $2}' )
+        fi
+        
+    
+    else
+        echo "取新添加的文件"
+        let line=addline+2
+        mpath=$(git status | awk 'NR=="'"$line"'"{print}')
+    fi
     read -p "markdown文件变动目录:[$mpath],继续执行下一步，回车键继续[y/n]" isContinue
     set_config MarkdownFilePath $mpath
     
@@ -51,6 +68,18 @@ function publish_draft(){
     fi
 
 
+    cpath=$(get_config CssFilePath)
+    read -p "css文件目录:[$cpath],是否更换,回车键不更换[y/n]" isContinue
+    # 转成小写
+    iscontinue=$(echo $isContinue | tr '[A-Z]' '[a-z]')
+    if [ "$iscontinue" = 'y' ]; then
+        read -p '开始更换目录:' cpath
+        set_config CssFilePath $cpath
+    else
+        echo "不更换目录"
+    fi
+
+
     ipath=$(get_config ImagePath)
     read -p "图片标题文件目录:[$ipath],是否更换,回车键不更换[y/n]" isContinue
     # 转成小写
@@ -62,8 +91,6 @@ function publish_draft(){
         echo "不更换目录"
     fi
 
-
- 
     Author=$(get_config Author)
     read -p "是否更换作者名称:[$Author],是否更换,回车键不更换[y/n]" isContinue
     # 转成小写
@@ -78,6 +105,7 @@ function publish_draft(){
     cd .vscode/ && go run main.go
 
 
+
 }
 function add_git(){
     local msg=$1
@@ -87,7 +115,8 @@ function add_git(){
     git push origin master
 }
 echo "需要发布到草稿箱"
-
+./.vscode/pushgitimg.sh
 publish_draft
+
 
 ```
