更新公众号

--- a/resources/blog_docs/content/微信公众号/无痛苦更新公众号.md
+++ b/resources/blog_docs/content/微信公众号/无痛苦更新公众号.md
@@ -1,21 +1,24 @@
 #### **背景**
-- 有自己的博客网站，以及博客小程序
-
+- 本身有自己的博客网站，以及博客小程序
 - 想更新公众号，一直没有动力去写，一个是自己的文笔实在是太弱，二个是觉得公众号的更新很麻烦，每次都需要去更新，尤其图片要重新上传，这就很麻烦，然后有些样式也不符合要求
-
 - 前一阵子，看了一个大佬写的无痛苦更新公众号，他写了一个python的插件，受益良多，正在向他学习，大佬的[博客](https://catcoding.me/)网址，公众号是程序员的喵，有兴趣可以关注下
-
-- 但是别人的东西必须得适用于自己才好，大佬的插件比较精简，但是样式不是我喜欢的，我想要追加css进去，这样可以随意替换css，其次本人主营php，博客是用go开发的，python插件有点突兀，所以这也让我重新拾起go，开发了一个类似他的那个插件的go版本
-
-- [链接demo](https://github.com/cjyzwg/markdown-wechat-demo)
+- 但是别人的东西必须得适用于自己才好，大佬的插件比较精简，但是样式不是我的风格，我想要追加css进去，这样可以随意替换css，其次本人主php，副go，博客是用go开发的，python插件有点突兀，所以这也让我重新拾起go，开发了一个类似他的那个插件的go版本
+- [python版本](https://github.com/cjyzwg/markdown-wechat-demo)
+- [go版本](https://github.com/cjyzwg/markdown-wechat-demo)
 
 #### **安装**
 
-- git clone https://github.com/cjyzwg/markdown-wechat-demo
+```
 
-- go mod tidy
+git clone https://github.com/cjyzwg/markdown-wechat-demo
 
-- go run main.go（即可添加到草稿箱）
+go mod tidy
+
+go run main.go（即可添加到草稿箱)
+
+
+```
+
 
 #### **脚本**
 用于添加草稿箱，以及提交github仓库
