--- a/resources/blog_docs/content/微信公众号/炎亚纶新剧出意外！2人坠谷当场死亡，炎亚纶不满剧组强势携全体主演罢工.md
+++ b/resources/blog_docs/content/微信公众号/炎亚纶新剧出意外！2人坠谷当场死亡，炎亚纶不满剧组强势携全体主演罢工.md
@@ -1,4 +1,4 @@
-###  本篇拷贝其他文章，还是用于测试上传是否生效
+###  本篇拷贝其他文章，还是用于测试上传是否生效，如有问题，立马删除
 3月11日晚，台湾娱乐圈传来噩耗，正在拍摄的台湾电视剧《初拥》被曝突然发生意外，有两名工作人员意外坠谷身亡，令人痛心。
 
 ![](https://gitee.com/cjyzwg/img/raw/master/202203122234773.png)
