--- a/resources/blog_docs/content/微信公众号/你对世界了解吗.md
+++ b/resources/blog_docs/content/微信公众号/你对世界了解吗.md
@@ -1,4 +1,4 @@
-### 本篇拷贝其他文章，用于测试上传是否生效
+### 本篇拷贝其他文章，用于测试上传是否生效,如有问题，立马删除
 #### **避免偏见**
 
 这两周我看了一些非技术类的书籍和视频，我最推荐的是这本[《事实》](https://book.douban.com/subject/33385402/)，可以说一定程度上改变了我的认知。
