更新无痛苦更新公众号

--- a/resources/blog_docs/content/微信公众号/无痛苦更新公众号.md
+++ b/resources/blog_docs/content/微信公众号/无痛苦更新公众号.md
@@ -1,4 +1,5 @@
 #### **背景**
+
 - 本身有自己的博客网站，以及博客小程序
 - 想更新公众号，一直没有动力去写，一个是自己的文笔实在是太弱，二个是觉得公众号的更新很麻烦，每次都需要去更新，尤其图片要重新上传，这就很麻烦，然后有些样式也不符合要求
 - 前一阵子，看了一个大佬写的无痛苦更新公众号，他写了一个python的插件，受益良多，正在向他学习，大佬的[博客](https://catcoding.me/)网址，公众号是程序员的喵，有兴趣可以关注下
@@ -6,9 +7,10 @@
 - [python版本](https://github.com/cjyzwg/markdown-wechat-demo)
 - [go版本](https://github.com/cjyzwg/markdown-wechat-demo)
 
+
 #### **安装**
 
-```
+```go
 
 git clone https://github.com/cjyzwg/markdown-wechat-demo
 
@@ -21,6 +23,7 @@ go run main.go（即可添加到草稿箱)
 
 
 #### **脚本**
+
 用于添加草稿箱，以及提交github仓库
 
 ```shell
@@ -123,3 +126,11 @@ publish_draft
 
 
 ```
+
+#### **配置picgo图床**
+- 使用picgo配置gitee图床，同时obsdian安装picgo插件，即可截图自动上传到gitee中，同时main.go中会自动解析，上传到微信中获取对应的mediaid
+- 同时标题的图片配置的是每日一图的api，可以根据env文件中自行配置是否要手动更换
+
+#### **注意事项**
+- 需要添加参考链接的时候，最好不要有a字母，否则链接不生效，之后优化
+- 截图的时候最好尺寸在550*550以内，否则上传图片不生效
