--- a/resources/blog_docs/content/微信公众号/无痛苦更新公众号.md
+++ b/resources/blog_docs/content/微信公众号/无痛苦更新公众号.md
@@ -132,6 +132,9 @@ publish_draft
 - 使用picgo配置gitee图床，同时obsdian安装picgo插件，即可截图自动上传到gitee中，同时main.go中会自动解析，上传到微信中获取对应的mediaid
 - 同时标题的图片配置的是每日一图的api，可以根据env文件中自行配置是否要手动更换
 
+#### **github和gitee同步**
+- 配置对应的key
+
 #### **注意事项**
 - 需要添加参考链接的时候，最好不要有a字母，否则链接不生效，之后优化
 - 截图的时候最好尺寸在550*550以内，否则上传图片不生效
