--- a/resources/blog_docs/content/微信公众号/无痛苦更新公众号.md
+++ b/resources/blog_docs/content/微信公众号/无痛苦更新公众号.md
@@ -135,6 +135,7 @@ publish_draft
 #### **github和gitee同步**
 - 配置对应的key
 - 配置对应的workflow
+- 同时修改blog对应的hook地址，由github转成gitee，github会失败
 
 #### **注意事项**
 - 需要添加参考链接的时候，最好不要有a字母，否则链接不生效，之后优化
