更新公众号

--- a/resources/blog_docs/content/微信公众号/无痛苦更新公众号.md
+++ b/resources/blog_docs/content/微信公众号/无痛苦更新公众号.md
@@ -137,6 +137,31 @@ publish_draft
 - 配置对应的workflow
 - 同时修改blog对应的hook地址，由github转成gitee，github会失败
 
+#### **html压缩**
+
+使用[minfy](https://github.com/tdewolff/minify)压缩工具
+
+```go
+import (
+	"github.com/tdewolff/minify/v2"
+	"github.com/tdewolff/minify/v2/html"
+)
+func HtmlMinify(htmlstring string) (string, error) {
+	m := minify.New()
+	m.Add("text/html", &html.Minifier{
+		KeepDefaultAttrVals: true,
+		KeepDocumentTags:    true,
+		KeepEndTags:         true,
+	})
+
+	mb, err := m.String("text/html", htmlstring)
+	if err != nil {
+		return "", err
+	}
+	return mb, err
+}
+```
+
 #### **注意事项**
 - 需要添加参考链接的时候，最好不要有a字母，否则链接不生效，之后优化
 - 截图的时候最好尺寸在550*550以内，否则上传图片不生效
