--- a/resources/blog_docs/content/微信公众号/无痛苦更新公众号.md
+++ b/resources/blog_docs/content/微信公众号/无痛苦更新公众号.md
@@ -139,7 +139,8 @@ publish_draft
 
 #### **html压缩**
 
-使用[minfy](https://github.com/tdewolff/minify)压缩工具
+使用[minify](https://github.com/tdewolff/minify)压缩工具
+minify的[说明文档](https://pkg.go.dev/github.com/tdewolff/minify#section-readme)
 
 ```go
 import (
@@ -163,6 +164,6 @@ func HtmlMinify(htmlstring string) (string, error) {
 ```
 
 #### **注意事项**
-- 需要添加参考链接的时候，最好不要有a字母，否则链接不生效，之后优化
+- wget -o x.gz不允许这么写，暂时不清楚原因在哪里
 - 截图的时候最好尺寸在550*550以内，否则上传图片不生效
 - 现在只能添加shell命令来配置，后面优化成go来写
