更新公众号

--- a/resources/blog_docs/content/认知与成长/无痛苦更新公众号.md
+++ b/resources/blog_docs/content/认知与成长/无痛苦更新公众号.md
@@ -163,8 +163,12 @@ func HtmlMinify(htmlstring string) (string, error) {
 - 使用[minify](https://github.com/tdewolff/minify)压缩工具  
 - minify的[说明文档](https://pkg.go.dev/github.com/tdewolff/minify#section-readme)   
 - [demo例子](https://go.tacodewolff.nl/minify)   
+- [viper例子](https://www.cnblogs.com/jiujuan/p/13799976.html)
 
 #### **注意事项**
 - wget -o x.gz不允许这么写，暂时不清楚原因在哪里
 - 截图的时候最好尺寸在550*550以内，否则上传图片不生效
 - 现在只能添加shell命令来配置，后面优化成go来写
+
+#### **优化**
+- 本地shell命令转成main.go
