"无痛苦更新"

--- a/resources/blog_docs/content/微信公众号/无痛苦更新公众号（完整）.md
+++ b/resources/blog_docs/content/微信公众号/无痛苦更新公众号（完整）.md
@@ -9,4 +9,8 @@
 
 我整体想要写作的流程：
 
+**80%的时间用于写作，而不是用在排版**
+
+> obsidian写作 -> 插件 -> 更新公众号/博客网站，小程序
+
 ![](https://gitee.com/cjyzwg/img/raw/master/202203171021868.png)
