"更新公众号"

--- a/resources/blog_docs/content/微信公众号/无痛苦更新公众号（完整）.md
+++ b/resources/blog_docs/content/微信公众号/无痛苦更新公众号（完整）.md
@@ -3,7 +3,7 @@
 
 **工欲善其事必先利其器**
 
-在接触公众号【程序员的喵】上有一篇无痛苦更新公众号的python插件，我的内心也蠢蠢欲动，开始了自己的go插件。
+在接触公众号【程序员的喵】上有一篇无痛苦更新公众号的[python插件](https://github.com/chenyukang/markdown-to-wechat)，我的内心也蠢蠢欲动，开始了自己的[go插件](https://github.com/chenyukang/markdown-to-wechat)。
 
 #### **流程**
 
