--- a/resources/blog_docs/content/微信公众号/无痛苦更新公众号（完整）.md
+++ b/resources/blog_docs/content/微信公众号/无痛苦更新公众号（完整）.md
@@ -11,6 +11,16 @@
 
 **80%的时间用于写作，而不是用在排版**
 
-> obsidian写作 -> 插件 -> 更新公众号/博客网站，小程序
+> obsidian写作 -> go插件 -> 更新公众号/博客网站，小程序
 
 ![](https://gitee.com/cjyzwg/img/raw/master/202203171021868.png)
+
+#### **步骤**
+1、obsidian开始写，安装一些必要的插件，比如excalidraw，还有最重要的[obsidian+picgo+gitee搭建图床](https://www.cnblogs.com/zd2021/p/15483878.html)，这样只用图片复制进来即可上传到gitee上了。
+
+2、使用go插件，go run main.go即能上传到微信公众号的草稿箱，这里没有做一键发布，手机上下载了订阅助手app，在草稿箱里预览下样式是否正确，然后发布。
+
+#### **优化/感悟**
+插件有些地方还不够完善，我后面会优化，覆盖面为小白，不用明白go就可以使用，会发布在github的release中。
+
+不过现在对于我本人已足够可以使用了，至少我可以在半小时内写出一篇文章，而不是再额外1个小时做排版工作。
