"无痛苦更新"

--- a/resources/blog_docs/content/微信公众号/无痛苦更新公众号（完整）.md
+++ b/resources/blog_docs/content/微信公众号/无痛苦更新公众号（完整）.md
@@ -15,6 +15,11 @@
 
 ![](https://gitee.com/cjyzwg/img/raw/master/202203171021868.png)
 
+> 本篇只讲obsidian 写完推送到公众号中:
+
+![](https://gitee.com/cjyzwg/img/raw/master/202203171050806.png)
+
+
 #### **步骤**
 1、obsidian开始写，安装一些必要的插件，比如excalidraw，还有最重要的[obsidian+picgo+gitee搭建图床](https://www.cnblogs.com/zd2021/p/15483878.html)，这样只用图片复制进来即可上传到gitee上了。
 
