--- a/resources/blog_docs/content/微信公众号/阿三与喵姑娘.md
+++ b/resources/blog_docs/content/微信公众号/阿三与喵姑娘.md
@@ -28,7 +28,7 @@
 
 突然想到我自己的两个经历，分享下：
 
-- **代码维护**
+- ***代码维护***
 
 之前我写代码都是面向过程的写法，写起来很快，但是对代码后期的维护很友好，我领导耐心地告诉我做法：
 
@@ -37,7 +37,7 @@
 
 这也就是我说的类似写作的框架，如果再把领域范围扩大，扩大到销售，自媒体推广，电商等等方面，都是一样的。
 
-- **与人沟通**
+- ***与人沟通***
 
 我的前任老板，一名深耕于健身行业二十年有余的商业女性，对于她的教诲我至今还没学到皮毛，她说过程序员的思想和销售说话很类似，比如顾客问你一句话，你需要去思考A/B/C三种说法，就像我们写代码的逻辑一样。
 
