科学上网修改

--- a/resources/blog_docs/content/树莓派/免费科学上网.md
+++ b/resources/blog_docs/content/树莓派/免费科学上网.md
@@ -135,7 +135,10 @@ WantedBy=multi-user.target
 - 2.开启cron定时脚本，每天执行.
 - 3.使用企业微信提醒每天签到多少流量，还剩多少流量.
 
+### 五、无法使用
+-  clash 安装在root目录下，切换成root用户
+-  更新订阅链接，订阅的域名发生改变，导致无法使用。
 
-### 五、未来改进
+### 六、未来改进
 
 - v2free 更新，添加定时脚本更新订阅地址   
