--- a/resources/blog_docs/content/微信公众号/阿三与喵姑娘.md
+++ b/resources/blog_docs/content/微信公众号/阿三与喵姑娘.md
@@ -1,3 +1,7 @@
+---
+categories:
+  - 微信公众号
+---
 #### **MU5735号航班**
 
 3.21的MU5735空难，那几天罕见的失眠了，几乎每隔一个小时都在刷着抖音、微博，获取132名乘客是否还活着的消息，搜寻黑匣子的消息，疯狂的刷着历史上的空难，来对比这次空难，甚至还有想去梧州的想法，直到官方宣布遇难我才相信。
