--- a/resources/blog_docs/content/认知与成长/我如何写出一万元的文章.md
+++ b/resources/blog_docs/content/认知与成长/我如何写出一万元的文章.md
@@ -1,3 +1,7 @@
+---
+categories:
+  - 认知与成长
+---
 ### 摘自程序员的喵公众号文章
 
 当我开始练习写作时，他人的故事、技巧分享激励了我。希望我的经历也会帮助到其他人，这篇案例分享的文章是我 2020 写的，原文是 How I Wrote a $500 Article in My First 3 Months on Medium ，我改过来加上一些后续。
