--- a/resources/blog_docs/content/机场推荐.md
+++ b/resources/blog_docs/content/机场推荐.md
@@ -22,19 +22,15 @@ categories: [机场]
 
 注册GLaDOS([注册地址](https://glados.rocks/register)), 并输入邀请码激活:
 
-<table><tbody><tr><td class="gutter"><pre><span class="line">1</span><br></pre></td><td class="code"><pre><code class="hljs">R3BI6-QN1SI-5P40Q-B94DL<br></code></pre></td></tr></tbody></table>
+```go
+
+R3BI6-QN1SI-5P40Q-B94DL
+
+```
 
 机场：简单理解就是全平台可用的梯子。
 
-## [](#测速结果 "测速结果")测速结果
-
-Speedtest stair高峰期测速结果（多线程测速），我本地带宽在500Mbps：  
-![](https://pawswrite.xyz/posts/33840/speedtest-stair.png)
-
-Youtube 高峰期（下午六点多）测速，能稳定在十万左右：  
-![](https://pawswrite.xyz/posts/33840/youtube.png)
-
-## [](#节点价格 "节点价格")节点价格
+## 节点价格
 
 他家有三个套餐，写着限速但实际我使用并没发现限速。  
 ![](https://pawswrite.xyz/posts/33840/price.png)
@@ -55,7 +51,7 @@ Youtube 高峰期（下午六点多）测速，能稳定在十万左右：
 
 自动签到脚本可留言获取
 
-## [](#注册流程 "注册流程")注册流程
+## 注册流程
 
 +   官网：[https://glados.rocks](https://glados.rocks/)
 +   注册：[https://glados.rocks/register](https://glados.rocks/register)
@@ -68,12 +64,16 @@ Youtube 高峰期（下午六点多）测速，能稳定在十万左右：
 
 在这里输入笔者的邀请码，点击Next，即可获得**三天免费**，
 
-<table><tbody><tr><td class="gutter"><pre><span class="line">1</span><br></pre></td><td class="code"><pre><code class="hljs">R3BI6-QN1SI-5P40Q-B94DL<br></code></pre></td></tr></tbody></table>
+```go
+
+R3BI6-QN1SI-5P40Q-B94DL
+
+```
 
 之后就等待账号设置完成：  
 ![](https://pawswrite.xyz/posts/33840/setup.png)
 
-## [](#使用 "使用")使用
+## 使用
 
 机场不仅有工作日工作时间在线的客服，还有详尽的教程。照着使用就好啦。
 
