--- a/resources/blog_docs/content/机场推荐.md
+++ b/resources/blog_docs/content/机场推荐.md
@@ -18,7 +18,7 @@ categories: [机场]
 
 ------
 
-全年稳定高速解锁Netflix的机场很少，大部分都很贵。推荐一个我自用了挺久的高性价比机场。
+全年稳定高速解锁Netflix的机场很少，大部分都很贵。推荐一个我自用了挺久的高性价比机场，使用ing。
 
 注册GLaDOS([注册地址](https://glados.rocks/register)), 并输入邀请码激活:
 
